--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,9 +24,7 @@ run: Ingrokingrok.exe authtoken $Env:NGROK_AUTH_TOKEN
 
 env:
 
-NGROK_AUTH_TOKEN: ${{ secrets.NGROK_AUTH_TOKEN }}- 
-
-name: Enable TS
+NGROK_AUTH_TOKEN: ${{ secrets.NGROK_AUTH_TOKEN }}- name: Enable TS
 
 run: Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server'- name "fDenyTSConnections" -Value 0
 
